--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../styles/sizes";
 @use "../styles/colors";
 
@@ -17,6 +18,7 @@ body {
     padding: auto;
     // font-family: Arial, Helvetica, sans-serif;
     overflow-wrap: break-word;
+    text-wrap: balance;
     hyphens: auto;
     max-width: 100%;
     // height: 100%;
@@ -29,3 +31,25 @@ body {
 *::after {
     box-sizing: border-box;
 }
+
+
+h1 {
+    margin: auto;
+}
+
+h2 {
+    margin: auto;
+}
+
+h3 {
+    margin: auto;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+// @media only screen and (min-device-width: sizes.$desktop-breakpoint) {
+
+// }
