--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -21,4 +21,5 @@ $spacer--desktop: $l-size;
 $tiny-breakpoint: 371px;
 $mobile-breakpoint: 425px;
 $medium-breakpoint: 540px;
+$tablet-breakpoint: 900px;
 $desktop-breakpoint: 1025px;
