--- a/src/app/data/yn-oracle/yn-oracle.scss
+++ b/src/app/data/yn-oracle/yn-oracle.scss
@@ -3,19 +3,11 @@
 @use "../../../styles/sizes";
 
 .twistBox {
-padding-bottom: sizes.$m-size;
-}
-
-.rollButtons--wrapper {
-    // display: flex;
-    // flex-wrap: wrap;
-    // justify-content: center;
-    width: 100%;
-    padding-top: sizes.$m-size;
+    padding-bottom: sizes.$xs-size;
 }
 
 .rollButtons {
-    width: 90%;
+    width: 100%;
 }
 
 .reminder--italic {
@@ -39,6 +31,6 @@ padding-bottom: sizes.$m-size;
 
 @media only screen and (min-device-width: sizes.$desktop-breakpoint) {
     .rollButtons {
-        width: 250px;
+        width: 90%;
     }
 }
