--- a/src/styles/_oracleDefaults.scss
+++ b/src/styles/_oracleDefaults.scss
@@ -15,9 +15,9 @@
     border: 1px solid colors.$oracleOutline;
 
     box-shadow: 0px 10px 21px -2px colors.$shadowBlack;
-    display: inline-flex;
-    align-items: flex-start;
-    justify-content: center;
+    // display: inline-flex;
+    // align-items: flex-start;
+    // justify-content: center;
 }
 
 button {
@@ -37,8 +37,6 @@ button {
     margin-bottom: sizes.$spacer--mobile;
     color: colors.$bodyTextColor;
     background-color: colors.$oracleBackground;
-
-    // width: 90%;
 }
 
 button:hover {
@@ -46,26 +44,39 @@ button:hover {
     box-shadow: 0px 10px 10px -2px colors.$shadowBlack;
 }
 
-.oracle--textBox {
+.oracle--topBox {
     text-align: center;
     width: 100%;
+    position: absolute;
+    top: 0px;
+    padding: sizes.$spacer--mobile;
 }
 
-.oracle--reminder {
-    font-style: italic;
+.oracle--bottomBox {
+    width: 100%;
+    text-align: center;
+
     position: absolute;
-    bottom: 12px;
+    bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
-    // width: 100%;
+    padding: sizes.$spacer--mobile;
 }
 
-.oracle--pin--bottom {
-    position: absolute;
-    bottom: 12px;
-    left: 50%;
-    transform: translateX(-50%);
-}
+// .oracle--reminder {
+//     font-style: italic;
+//     position: absolute;
+//     bottom: 12px;
+//     left: 50%;
+//     transform: translateX(-50%);
+// }
+
+// .oracle--pin--bottom {
+//     position: absolute;
+//     bottom: 12px;
+//     left: 50%;
+//     transform: translateX(-50%);
+// }
 
 .oracle--spacer--tiny {
     padding-bottom: sizes.$xs-size;
@@ -83,15 +94,15 @@ button:hover {
 
 @media only screen and (min-device-width: sizes.$tablet-breakpoint) {
     .oracle--wrapper {
-        height: 700px;
+        height: 800px;
         width: 500px;
     }
 }
 
 @media only screen and (min-device-width: sizes.$desktop-breakpoint) {
     .oracle--wrapper {
-        height: 800px;
-        width: 500px;
+        height: 550px;
+        width: 450px;
     }
 
     button {
