Add cursor pointer

--- a/src/styles/_oracleDefaults.scss
+++ b/src/styles/_oracleDefaults.scss
@@ -37,6 +37,7 @@ button {
     margin-bottom: sizes.$spacer--mobile;
     color: colors.$bodyTextColor;
     background-color: colors.$oracleBackground;
+    cursor: pointer;
 }
 
 button:hover {
