--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -55,6 +55,14 @@ ul {
     padding: 0;
 }
 
+// .material-symbols-outlined {
+//     font-variation-settings:
+//         "FILL" 0,
+//         "wght" 400,
+//         "GRAD" 0,
+//         "opsz" 24;
+// }
+
 @media only screen and (min-device-width: sizes.$desktop-breakpoint) {
     body {
         font-size: sizes.$calcFontSizeSmall;
