--- a/src/app/data/yn-oracle/yn-oracle.html
+++ b/src/app/data/yn-oracle/yn-oracle.html
@@ -1,6 +1,30 @@
 <div class="oracle--wrapper">
     <div class='oracle--topBox'>
-        <h2 class="oracle--spacer--tiny">{{oracle.title}}</h2>
+        <div class="oracle--title--wrapper ">
+
+            <button class="oracle--pin--width oracle--pin--button material-symbols-outlined"
+                [ngClass]="{'pinned': pinned,'unpinned': !pinned}" (click)="pinThisOracle()">keep</button>
+
+            <h2 class="oracle--spacer--tiny oracle--title--width">{{oracle.title}}</h2>
+
+            <div class="oracle--pin--width ">
+                <div class="oracle--pin--height">
+                    @if(pinned && (pinLength > 1)){
+                    <button (click)="upThisOracle()" class="oracle--pin--button material-icons">
+                        arrow_upward_alt
+                    </button>
+                    }
+                </div>
+                <div class="oracle--pin--height">
+                    @if(pinned && (pinLength > 1)){ <button (click)="downThisOracle()"
+                        class="oracle--pin--button material-icons">
+                        arrow_downward_alt
+                        </button>
+                        }
+                </div>
+            </div>
+
+        </div>
 
         <div class="rollResults--wrapper oracle--spacer--tiny">
             @if (rollPrimary>0) {
@@ -35,7 +59,7 @@
         }
 
         @for (likely of odds; track likely) {
-        <button class="rollButtons" (click)="rollDice(likely[1])">{{likely[1]}}
+        <button class="rollButtons" id="odds{{$index}}" (click)="rollDice(likely[1])">{{likely[1]}}
         </button>
         }
     </div>
