--- a/src/app/display/searchbar/searchbar.scss
+++ b/src/app/display/searchbar/searchbar.scss
@@ -1,6 +1,27 @@
 @use "../../../styles/sizes";
 @use "../../../styles/colors";
 
+// input[type="search"]::-webkit-search-cancel-button {
+//     -webkit-appearance: none;
+//     background-image: url("../../../../public/Clear_Search_unfocused.png");
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     height: 21px;
+//     width: 20px;
+//     margin-left: 0.4em;
+//     margin-right: 0.4em;
+//     cursor: pointer;
+//     opacity: 0.7;
+//     &:hover {
+//         // opacity: 1;
+//         background-image: url("../../../../public/Clear_Search_resized_hover.png");
+//         background-size: contain;
+//         background-repeat: no-repeat;
+//         background-position: center;
+//     }
+// }
+
 .wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -12,6 +33,11 @@
 
 .label--styling {
     padding-right: 0px;
+}
+
+.inputAndReset {
+    display: block;
+    width: 100%;
 }
 
 #oracleSearch {
@@ -29,6 +55,7 @@
     }
 }
 #oracleSearch:focus {
+    outline: none;
     background-color: colors.$searchBackgroundFocused;
     outline-color: colors.$searchOutlineColor;
     color: colors.$searchText;
@@ -37,8 +64,42 @@
     }
 }
 
+#resetSearch {
+    width: 100%;
+    margin-top: 10px;
+    font-size: 1.5em;
+    background-color: colors.$searchBackgroundUnfocused;
+    color: colors.$searchUnfocused;
+    text-align: center;
+    border-style: solid;
+    border-color: colors.$searchUnfocused;
+    border-radius: 25px;
+
+    padding-left: 15px;
+    padding-right: 15px;
+    cursor: pointer;
+}
+#resetSearch:hover {
+    background-color: colors.$searchUnfocused;
+    color: colors.$searchBackgroundUnfocused;
+}
+
 @media only screen and (min-device-width: sizes.$tablet-breakpoint) {
     .label--styling {
         padding-right: 10px;
+    }
+
+    .inputAndReset {
+        display: flex;
+        flex-wrap: nowrap;
+        width: 100%;
+    }
+
+    #resetSearch {
+        width: fit-content;
+        margin-top: 0px;
+        margin-left: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
