--- a/src/app/display/body/body.html
+++ b/src/app/display/body/body.html
@@ -5,7 +5,7 @@
     <li class="">
       <ng-container *ngComponentOutlet="
             componentSelector(oracle);
-            inputs: {oracle, pinLength};
+            inputs: {oracle, pinnedLength};
             " />
     </li>
     }
