Add param subscription to searchbar, filter confirmation on body

--- a/src/app/display/body/body.html
+++ b/src/app/display/body/body.html
@@ -14,5 +14,8 @@
     }
 
   </ul>
+  @if (oracles.length === 0) {
+  <div id="noMatches" class={}>No Oracles match the current filter settings</div>
+  }
 
 </div>
