--- a/src/app/display/searchbar/searchbar.html
+++ b/src/app/display/searchbar/searchbar.html
@@ -2,7 +2,7 @@
     <h2 class="label--styling" for="oracleSearch">Search Oracles</h2>
     <div class="inputAndReset">
         <button id="cyclePath" (click)="cyclePath()">{{pathType | titlecase}}</button>
-        <input id="oracleSearch" type="text" placeholder="Search title or tag" [(ngModel)]="searchText"
+        <input id="oracleSearch" type="text" placeholder="Search title or tag" [(ngModel)]="filterText"
             (input)="onInputChange($event)" />
         <button id="resetSearch" (click)="onResetClick()">Reset</button>
     </div>
